<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffffff"
    android:layout_margin="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:weightSum="1">

        <TextClock
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Clock"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:editable="false"
            android:contentDescription="@string/clock" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:id="@+id/Top">

        <RelativeLayout
            android:layout_width="162dp"
            android:layout_height="fill_parent"
            android:id="@+id/TopLeft">

            <TextView
                android:text="@string/temperature"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/Temperature_title"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/termometer"
                android:src="@drawable/termometer"
                android:scaleType="fitXY"
                android:contentDescription="@string/temp"
                android:layout_gravity="left"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/Tvalue"
                android:text="@string/Tvalue"
                android:layout_gravity="right"
                android:layout_below="@+id/termometer"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Temperature_title"
                android:layout_centerHorizontal="true"></LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/TopRight">

            <TextView
                android:text="@string/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/Humidity_title"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/Hygrometer"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="86dp"
                android:layout_height="116dp"
                android:id="@+id/Hygrometer"
                android:src="@drawable/humidity"
                android:contentDescription="@string/humi"
                android:focusable="false"
                android:layout_marginLeft="0dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/Hvalue"
                android:text="@string/Hvalue"
                android:layout_gravity="right"
                android:layout_below="@+id/Hygrometer"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="186dp"
        android:id="@+id/Bottom">

        <RelativeLayout
            android:layout_width="145dp"
            android:layout_height="202dp"
            android:id="@+id/BottomLeft">

            <TextView
                android:text="@string/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/Pressure_titel"
                android:layout_gravity="left"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Barometer"
                android:src="@drawable/pressure"
                android:scaleType="fitXY"
                android:contentDescription="@string/press"
                android:focusable="true"
                android:layout_gravity="left|center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/Pvalue"
                android:text="@string/Pvalue"
                android:layout_gravity="right"
                android:layout_below="@+id/Barometer"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/BottomRight"
            android:focusable="false">

            <TextView
                android:text="@string/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:id="@+id/WindTitle"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/Wvalue"
                android:text="@string/Wvalue"
                android:layout_gravity="right|center"
                android:layout_below="@+id/wind_vane"
                android:layout_alignParentEnd="false"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wind_vane"
                android:src="@drawable/magnemometer"
                android:layout_gravity="left|center"
                android:longClickable="true"
                android:contentDescription="@string/windlogo"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connect_button"
        android:textSize="32sp"
        android:onClick="onConnectClick"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
